applications/openeuler-cn4-archives-repo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: archives-repo
  name: archives-repo
