applications/openeuler-cn4-archives-repo/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: archives-repo-nginx
    cert-manager.io/cluster-issuer: letsencrypt-archive-repo
  name: openeuler-cn4-repo-openatom-ingress
  namespace: archives-repo
spec:
  rules:
  - host: archives.openeuler.openatom.cn
    http:
      paths:
      - backend:
          serviceName: openeuler-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - archives.openeuler.openatom.cn
    secretName: openeuler-tls
